--- a/memcached/memcached.csproj
+++ b/memcached/memcached.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Cache.cs" />
     <Compile Include="Memcache.cs" />
+    <Compile Include="Terminal.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
